<resources>
    <string name="app_name"></string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="search">Search</string>
    <string name="home"></string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="text">Discover jobs you did not know</string>
    <string name="text3">Sign in with LinkedIn</string>
    <string name="text2">were out here</string>
    <string name="buttontext">Join now</string>
    <string name="buttontext2"></string>
    <string name="buttontext3">By clicking join now, you agree to LinkedIn User Agreement,Private Policy and Cookie Policy</string>
    <string name="buttontext4">Connect to Opportunity</string>
    <string name="buttontext5">TM</string>
    <string name="buttontext6">ALREADY HAVE AN ACCOUNT? SIGN IN</string>
    <string name="buttontext7">DO NOT HAVE AN ACCOUNT? SIGN UP</string>
    <string name="buttontextLogin">Sign In</string>
    <string name="title_activity_friendship__requests"></string>
    <string name="title_activity_register"></string>
    <string name="title_activity_add_profile">AddProfile</string>
    <string name="title_activity_location"></string>
    <string name="title_activity_add_photo"></string>
    <string name="title_activity_sign_in">SignIn</string>
    <string-array name="Countries">
        <item>Select any country</item>
        <item>Afganistan</item>
        <item>Algeria</item>
        <item>Asia</item>
        <item>Angola</item>
        <item>Belium</item>
        <item>Brazil</item>
        <item>Canada</item>
        <item>Congo</item>
        <item>China</item>
        <item>Egypt</item>
        <item>England</item>
        <item>France</item>
        <item>Ghana</item>
        <item>Germany</item>
        <item>Gabon</item>
        <item>Holland</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Morocco</item>
        <item>Malawi</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Portugal</item>
        <item>Paraguay</item>
        <item>South Korea</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Taiwan</item>
        <item>Uruguay</item>
        <item>Zimbambwe</item>
    </string-array>
    <string-array name="Places">
        <item>Select any place</item>
        <item>New York</item>
        <item>Johannesburg Central</item>
        <item>Johannesburg West</item>
        <item>Johannesburg North</item>
        <item>Johannesburg East</item>
        <item>Johannesburg Metropolitan</item>
        <item>CapeTown</item>
        <item>Witbank</item>
        <item>Nelspruit</item>
        <item>Nigel</item>
        <item>Benoni</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_job_search">JobSearchActivity</string>
    <string name="title_activity_search_message">SearchMessageActivity</string>
</resources>
