<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg_color">

    <android.support.percent.PercentRelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginTopPercent="15%"
            app:layout_marginLeftPercent="15%"
            android:text="@string/text"
            android:textColor="#FEFCFF"
            android:textStyle="normal"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLine1"
            app:layout_marginTopPercent="0%"
            app:layout_marginLeftPercent="35%"
            android:text="@string/text2"
            android:textColor="#FEFCFF"
            android:textStyle="normal"
            android:textSize="20sp"/>
        <ListView
            android:id="@+id/lsProfile"
            app:layout_marginTopPercent="-200%"
            app:layout_marginLeftPercent="8%"
            android:layout_below="@+id/tvLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="90%"
            app:layout_heightPercent="40%"
            android:background="#FFFFFF"/>

        <ProgressBar
            android:id="@+id/prgssBar"
            app:layout_marginLeftPercent="35%"
            app:layout_marginTopPercent="1%"
            android:layout_below="@+id/lsProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="40%"
            app:layout_heightPercent="10%"
            android:progress="50"
            />

        <Button android:id="@+id/bJoin"
            android:layout_below="@+id/prgssBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginLeftPercent="7%"
            app:layout_widthPercent="91%"
            app:layout_heightPercent="7%"
            app:layout_marginTopPercent="1%"
            android:textColor="#FFFFFF"
            android:text="@string/buttontext"
            android:background="@drawable/gradient_button_bg_color"
            android:onClick="onClick" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bJoin"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:text="@string/text3"
            app:layout_marginTopPercent="1%"
            app:layout_marginLeftPercent="35%"
            android:textStyle="normal"/>
    </android.support.percent.PercentRelativeLayout>
</ScrollView>
