<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg_color">
    <!-- <ImageView android:id="@+id/imgIcons1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_widthPercent="90%"
         app:layout_marginTopPercent="15%"
         app:layout_marginLeftPercent="5%"
         android:background="@drawable/linkedin_logo"/> -->
    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_widthPercent="85%"
        app:layout_marginTopPercent="10%"
        app:layout_marginLeftPercent="9%"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            app:layout_widthPercent="50%"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:inputType="text"
            android:hint="First Name"
            app:layout_marginLeftPercent="12%"
            app:layout_marginTopPercent="5%"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="325dp"
            android:layout_below="@+id/etLastName"
            android:layout_height="wrap_content"
            app:layout_widthPercent="250%"
            android:inputType="text"
            android:backgroundTint="#FFFFFF"
            android:hint="Last Name"
            android:textColor="#FFFFFF"
            app:layout_marginLeftPercent="0%"
            app:layout_marginTopPercent="15%"
            android:layout_marginTop="25dp"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="325dp"
            android:layout_below="@+id/etEmailAddress"
            android:layout_height="wrap_content"
            app:layout_widthPercent="250%"
            android:inputType="text"
            android:backgroundTint="#FFFFFF"
            android:hint="Email Address"
            android:textColor="#FFFFFF"
            android:layout_marginTop="25dp"
            app:layout_marginLeftPercent="0%"
            app:layout_marginTopPercent="8%"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            app:layout_widthPercent="250%"
            android:layout_below="@+id/etEmailAddress"
            android:inputType="textPassword"
            android:backgroundTint="#FFFFFF"
            android:hint="Password"
            android:textColor="#FFFFFF"
            android:layout_marginTop="25dp"
            app:layout_marginLeftPercent="0%"
            app:layout_marginTopPercent="25%"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <TextView
            android:id="@+id/tvPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"

            app:layout_marginTopPercent="35%"
            app:layout_marginLeftPercent="10%"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/buttontext3"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="#FFFFFF" />

        <Button android:id="@+id/bJoin"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ConfirmPassword"
            app:layout_marginLeftPercent="10%"
            app:layout_widthPercent="91%"
            app:layout_heightPercent="7%"
            android:layout_marginTop="31dp"
            android:layout_marginLeft="0dp"
            android:textColor="#FFFFFF"
            android:text="@string/buttontext"
            android:background="@drawable/gradient_button_bg_color"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            app:layout_marginTopPercent="35%"
            app:layout_marginLeftPercent="12%"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/buttontext6"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</android.support.percent.PercentRelativeLayout>
